--- a/zeus_app/package.json
+++ b/zeus_app/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-keychain": "^10.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
@@ -31,6 +32,7 @@
     "react-native-worklets-core": "^1.6.2",
     "react-query": "^3.39.3",
     "sats-connect": "^4.2.1",
+    "socket.io-client": "^4.7.2",
     "starknet": "^9.2.1",
     "zustand": "^5.0.3"
   },
